--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+authors = ['RareLink <https://github.com/RareLink>']
 build = 'build.rs'
-description = 'A fresh FRAME-based Substrate node, ready for hacking.'
-edition = '2018'
-homepage = 'https://substrate.dev'
+description = 'An implementation of RareLink node'
+edition = '2020'
+homepage = 'http://rarelink.network'
 license = 'Unlicense'
-name = 'node-template'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
-version = '2.0.0'
+name = 'rarelink-node'
+repository = 'https://github.com/RareLink/rarelink-runtime-node'
+version = '0.0.1'
 
 [[bin]]
-name = 'node-template'
+name = 'rarelink-node'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -23,7 +23,7 @@ jsonrpc-core = '15.0.0'
 structopt = '0.3.8'
 
 # local dependencies
-node-template-runtime = { path = '../runtime', version = '2.0.0' }
+node-runtime = { path = '../runtime', version = '0.0.1' }
 
 # Substrate dependencies
 frame-benchmarking = '2.0.0'
@@ -54,4 +54,4 @@ substrate-frame-rpc-system = '2.0.0'
 
 [features]
 default = []
-runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
+runtime-benchmarks = ['node-runtime/runtime-benchmarks']
