--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+authors = ['RareLink <https://github.com/RareLink>']
 edition = '2018'
-homepage = 'https://substrate.dev'
+homepage = 'http://rarelink.network'
 license = 'Unlicense'
-name = 'node-template-runtime'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
-version = '2.0.0'
+name = 'rarelink-node'
+repository = 'https://github.com/RareLink/rarelink-runtime-node'
+version = '0.0.1'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
