--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ['RareLink <https://github.com/RareLink>']
 build = 'build.rs'
 description = 'An implementation of RareLink node'
-edition = '2020'
+edition = '2018'
 homepage = 'http://rarelink.network'
 license = 'Unlicense'
 name = 'rarelink-node'
@@ -23,7 +23,7 @@ jsonrpc-core = '15.0.0'
 structopt = '0.3.8'
 
 # local dependencies
-node-runtime = { path = '../runtime', version = '0.0.1' }
+rarelink-runtime = { path = '../runtime', version = '0.0.1' }
 
 # Substrate dependencies
 frame-benchmarking = '2.0.0'
@@ -54,4 +54,4 @@ substrate-frame-rpc-system = '2.0.0'
 
 [features]
 default = []
-runtime-benchmarks = ['node-runtime/runtime-benchmarks']
+runtime-benchmarks = ['rarelink-runtime/runtime-benchmarks']
